tests/baselines/reference/minimal_relative(noemit=false).errors.txt
error TS5056: Cannot write file 'dist/c.js' because it would be overwritten by multiple input files.
error TS6231: Could not resolve the path '/project/e' with the extensions: '.ts', '.tsx', '.d.ts', '.cts', '.d.cts', '.mts', '.d.mts'.
  The file is in the program because:
    Root file specified for compilation
error TS6504: File '/project/b.js' is a JavaScript file. Did you mean to enable the 'allowJs' option?
  The file is in the program because:
    Root file specified for compilation
/project/main.ts(1,16): error TS2307: Cannot find module './a' or its corresponding type declarations.
/project/main.ts(3,16): error TS2691: An import path cannot end with a '.ts' extension. Consider importing './a.js' instead.
/project/main.ts(5,16): error TS2307: Cannot find module './b' or its corresponding type declarations.
/project/main.ts(7,16): error TS2691: An import path cannot end with a '.ts' extension. Consider importing './b.js' instead.
/project/main.ts(8,16): error TS2691: An import path cannot end with a '.d.ts' extension. Consider importing './b.js' instead.
/project/main.ts(10,16): error TS2691: An import path cannot end with a '.ts' extension. Consider importing './c.js' instead.
/project/main.ts(11,16): error TS2691: An import path cannot end with a '.tsx' extension. Consider importing './c.js' instead.
/project/main.ts(11,16): error TS6142: Module './c.tsx' was resolved to '/project/c.tsx', but '--jsx' is not set.
/project/main.ts(13,16): error TS2307: Cannot find module './d' or its corresponding type declarations.
/project/main.ts(14,16): error TS2307: Cannot find module './d/index' or its corresponding type declarations.
/project/main.ts(15,16): error TS2691: An import path cannot end with a '.ts' extension. Consider importing './d/index.js' instead.
/project/main.ts(17,16): error TS2307: Cannot find module './e' or its corresponding type declarations.


!!! error TS5056: Cannot write file 'dist/c.js' because it would be overwritten by multiple input files.
!!! error TS6231: Could not resolve the path '/project/e' with the extensions: '.ts', '.tsx', '.d.ts', '.cts', '.d.cts', '.mts', '.d.mts'.
!!! error TS6231:   The file is in the program because:
!!! error TS6231:     Root file specified for compilation
!!! error TS6504: File '/project/b.js' is a JavaScript file. Did you mean to enable the 'allowJs' option?
!!! error TS6504:   The file is in the program because:
!!! error TS6504:     Root file specified for compilation
==== /project/a.ts (0 errors) ====
    export {};
    
==== /project/b.ts (0 errors) ====
    export {};
    
==== /project/b.js (0 errors) ====
    export {};
    
==== /project/b.d.ts (0 errors) ====
    export {};
    
==== /project/c.ts (0 errors) ====
    export {};
    
==== /project/c.tsx (0 errors) ====
    export {};
    
==== /project/d/index.ts (0 errors) ====
    export {};
    
==== /project/e (0 errors) ====
    export {};
    
==== /project/main.ts (12 errors) ====
    import {} from "./a";
                   ~~~~~
!!! error TS2307: Cannot find module './a' or its corresponding type declarations.
    import {} from "./a.js";
    import {} from "./a.ts";
                   ~~~~~~~~
!!! error TS2691: An import path cannot end with a '.ts' extension. Consider importing './a.js' instead.
    
    import {} from "./b";
                   ~~~~~
!!! error TS2307: Cannot find module './b' or its corresponding type declarations.
    import {} from "./b.js";
    import {} from "./b.ts";
                   ~~~~~~~~
!!! error TS2691: An import path cannot end with a '.ts' extension. Consider importing './b.js' instead.
    import {} from "./b.d.ts";
                   ~~~~~~~~~~
!!! error TS2691: An import path cannot end with a '.d.ts' extension. Consider importing './b.js' instead.
    
    import {} from "./c.ts";
                   ~~~~~~~~
!!! error TS2691: An import path cannot end with a '.ts' extension. Consider importing './c.js' instead.
    import {} from "./c.tsx";
                   ~~~~~~~~~
!!! error TS2691: An import path cannot end with a '.tsx' extension. Consider importing './c.js' instead.
                   ~~~~~~~~~
!!! error TS6142: Module './c.tsx' was resolved to '/project/c.tsx', but '--jsx' is not set.
    
    import {} from "./d";
                   ~~~~~
!!! error TS2307: Cannot find module './d' or its corresponding type declarations.
    import {} from "./d/index";
                   ~~~~~~~~~~~
!!! error TS2307: Cannot find module './d/index' or its corresponding type declarations.
    import {} from "./d/index.ts";
                   ~~~~~~~~~~~~~~
!!! error TS2691: An import path cannot end with a '.ts' extension. Consider importing './d/index.js' instead.
    
    import {} from "./e";
                   ~~~~~
!!! error TS2307: Cannot find module './e' or its corresponding type declarations.
    